# whatever_trading

./: .gitignore  README.md  bar_data.json  pyproject.toml
src/: alpaca_interface.py  cli.py  config.py  data_types.py  strategy_base.py  viz.py  whatever.py
src/strategies/: __init__.py  strategy_1.py
src/toolbox/: __init__.py  fib_retrace.py  ichimoku.py  ma_ribbon.py  range.py  tool_base.py  vol_profile.py  whatever.py
src/toolbox/fib_retrace/: config.py  fib_retrace.py
src/toolbox/ichimoku/: ichimoku.py
src/toolbox/ma_ribbon/: config.py  ma_ribbon.py
src/toolbox/range/: config.py  range.py
src/toolbox/vol_profile/: config.py  vol_profile.py
